[gd_scene load_steps=2 format=3 uid="uid://buw0if48o53ii"]

[ext_resource type="Script" path="res://src/UI/Body/Layers/layer.gd" id="1_0oowt"]

[node name="LayerPanelContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0oowt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Layer"
vertical_alignment = 1
text_overrun_behavior = 3

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "X"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
